@@ -5,6 +5,7 @@ Revision history for Dist-Build
           - Normalize sharedir paths in create_pattern
           - Add is_os and is_os_type delegates
           - Rename distribution_version delegate to version
+          - Adapt to standard self and outer methods on Planner
 
 0.018     2025-03-17 11:58:21+01:00 Europe/Brussels
           - Add auto_xs to Dist::Build::XS
